@@ -22,6 +22,13 @@ import org.apache.lucene.search.BooleanQuery;
 import org.apache.lucene.search.PhraseQuery;
 import org.apache.lucene.search.TermQuery;
 
+import java.util.ArrayList;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+
 import org.apache.nutch.analysis.NutchDocumentAnalyzer;
 import org.apache.nutch.analysis.CommonGrams;
 
@@ -31,7 +38,12 @@ import org.apache.nutch.searcher.Query.*;
 import org.apache.hadoop.conf.Configuration;
 
 /** The default query filter.  Query terms in the default query field are
- * expanded to search the url, anchor and content document fields.*/
+ * expanded to search the url, anchor and content document fields.
+ * Additional fields can be added by specifying parameters of the form : query.basic.(fieldname).boost
+ * to the configuration files (see nutch-default.xml for an example).Such fields will be used in the clauses
+ * generated by the BasicQueryFilter e.g. for a user query A B, it generates +(field1:A field2:A ...) +(field1:B field2:B....).
+ * If you don't want the additional fields to be included in the clauses you will need to implement a custom query filter for it.
+ **/
 public class BasicQueryFilter implements QueryFilter {
     
   private static final int  URL_BOOST       = 0;
@@ -44,7 +56,7 @@ public class BasicQueryFilter implements QueryFilter {
 
   private float PHRASE_BOOST;
 
-  private static final String[] FIELDS =
+  private String[] FIELDS =
   { "url", "anchor", "content", "title", "host" };
 
   private float[] FIELD_BOOSTS = new float[5];
@@ -177,9 +189,51 @@ public class BasicQueryFilter implements QueryFilter {
     this.FIELD_BOOSTS[TITLE_BOOST] = conf.getFloat("query.title.boost", 1.5f);
     this.FIELD_BOOSTS[HOST_BOOST] = conf.getFloat("query.host.boost", 2.0f);
     this.PHRASE_BOOST = conf.getFloat("query.phrase.boost", 1.0f);
+    findAdditionalFields(conf);
   }
 
   public Configuration getConf() {
     return this.conf;
+  }
+  
+  /** Searches for parameters of the form : query.basic.(fieldname).boost
+   * and adds the fielname to the list of default fields.
+   **/
+  private void findAdditionalFields(Configuration conf) {
+    // get additional fields specified in parameters
+    Pattern pat = Pattern.compile("query\\.basic\\.(.+)\\.boost");
+    Iterator confEntriesIterator = conf.iterator(); 
+    List existingFields = java.util.Arrays.asList(FIELDS);  
+    ArrayList tempfieldNames = new ArrayList();
+    ArrayList tempfieldBoosts = new ArrayList();
+    while (confEntriesIterator.hasNext()){
+      Map.Entry entry = (Map.Entry) confEntriesIterator.next();
+      String key = entry.getKey().toString();
+      Matcher match = pat.matcher(key);
+      if (!match.matches())continue;
+      String fieldName = match.group(1);
+      if (fieldName!=null){
+        // check whether it matches one of the fields which are used by default
+        if (existingFields.contains(fieldName)) continue;
+        // reserved keyword
+        if (fieldName.equals("phrase")) continue;
+        float boostCustomField = conf.getFloat(key, 2.0f);
+        tempfieldNames.add(fieldName);
+        tempfieldBoosts.add(Float.valueOf(boostCustomField));
+      }
+    }
+    if (tempfieldNames.size()==0) return;
+    // store additional fields names and boost values in corresponding fields
+    String[] tempNames = new String[5+tempfieldNames.size()];
+    float[] tempBoosts = new float[5+tempfieldNames.size()];
+    System.arraycopy(FIELDS, 0,tempNames, 0, 5);
+    System.arraycopy(this.FIELD_BOOSTS, 0,tempBoosts, 0, 5);
+    for (int newF=0; newF  < tempfieldNames.size();newF++){
+      tempNames[5+newF]=(String) tempfieldNames.get(newF);
+      tempBoosts[5+newF]= ((Float)tempfieldBoosts.get(newF)).floatValue();
+    }
+    // replace original fields
+    this.FIELDS = tempNames;
+    this.FIELD_BOOSTS = tempBoosts;
   }
 }
