@@ -346,6 +346,9 @@ Unreleased changes (1.0-dev)
 129. NUTCH-691 - Update jakarta poi jars to the most relevant version
      (Dmitry Lihachev via siren)
 
+130. NUTCH-563 - Include custom fields in BasicQueryFilter
+     (Julien Nioche via siren)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
